--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -171,7 +171,7 @@
   <string name="ConversationActivity_unblock_this_contact_question">Gesprekspartner deblokkeren?</string>
   <string name="ConversationActivity_unblock_this_group_question">Groep deblokkeren?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Je zult weer berichten en oproepen van deze gesprekspartner kunnen ontvangen.</string>
-  <string name="ConversationActivity_unblock_this_group_description">Huidige leden van de groep kunnen jou weer aan de groep toevoegen.</string>
+  <string name="ConversationActivity_unblock_this_group_description">Huidige leden van de groep zullen jou weer aan de groep kunnen toevoegen.</string>
   <string name="ConversationActivity_unblock">Deblokkeren</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">Bijlage overschrijdt de maximale grootte voor het type bericht dat je wilt verzenden.</string>
   <string name="ConversationActivity_quick_camera_unavailable">Camera niet beschikbaar</string>
@@ -577,7 +577,7 @@ weergaven.</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Gesprekspartner deblokkeren?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Je zult weer berichten en oproepen van deze gesprekspartner kunnen ontvangen.</string>
   <string name="RecipientPreferenceActivity_unblock_this_group_question">Groep deblokkeren?</string>
-  <string name="RecipientPreferenceActivity_unblock_this_group_description">Bestaande leden zullen jou weer kunnen toevoegen aan de groep.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_description">Huidige leden van de groep zullen jou weer aan de groep kunnen toevoegen.</string>
   <string name="RecipientPreferenceActivity_error_leaving_group">Fout bij het verlaten van de groep</string>
   <string name="RecipientPreferenceActivity_unblock">Deblokkeren</string>
   <string name="RecipientPreferenceActivity_enabled">Ingeschakeld</string>
