--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -483,6 +483,7 @@
     <item quantity="other">No se pueden compartir más de %d objetos.</item>
   </plurals>
   <string name="MediaSendActivity_select_recipients_description">Seleccionar contactos</string>
+  <string name="MediaSendActivity_tap_here_to_make_this_message_disappear_after_it_is_viewed">Toca aquí para hacer desaparecer este mensaje tras ser visto.</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Archivos multimedia</string>
   <!--MessageRecord-->
