--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -484,6 +484,7 @@ I suoi messaggi e le chiamate sono state disabilitate, si prega di provare e ri-
     <item quantity="other">Non puoi condividere più di %d elementi.</item>
   </plurals>
   <string name="MediaSendActivity_select_recipients_description">Seleziona destinatari</string>
+  <string name="MediaSendActivity_tap_here_to_make_this_message_disappear_after_it_is_viewed">Clicca qui per far scomparire questo messaggio dopo che è stato visualizzato.</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Tutti i file multimediali</string>
   <!--MessageRecord-->
