--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -462,6 +462,7 @@
     <item quantity="other">%d個を超えるアイテムは共有できません。</item>
   </plurals>
   <string name="MediaSendActivity_select_recipients_description">宛先を選択</string>
+  <string name="MediaSendActivity_tap_here_to_make_this_message_disappear_after_it_is_viewed">ここをタップして、このメッセージを閲覧後に消去します。</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">すべてのメディア</string>
   <!--MessageRecord-->
