--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -484,6 +484,7 @@ weergaven.</string>
     <item quantity="other">Je kunt niet meer dan %d items delen.</item>
   </plurals>
   <string name="MediaSendActivity_select_recipients_description">Selecteer Signal-gebruikers</string>
+  <string name="MediaSendActivity_tap_here_to_make_this_message_disappear_after_it_is_viewed">Tik hier om er voor te zorgen dat dit bericht wordt gewist nadat het is gezien.</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Alle media</string>
   <!--MessageRecord-->
