--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -525,6 +525,7 @@
     <item quantity="other">Nie można udostępnić więcej niż %d multimediów.</item>
   </plurals>
   <string name="MediaSendActivity_select_recipients_description">Wybierz odbiorców</string>
+  <string name="MediaSendActivity_tap_here_to_make_this_message_disappear_after_it_is_viewed">Stuknij tutaj, aby ta wiadomość znikła po obejrzeniu.</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Wszystkie multimedia</string>
   <!--MessageRecord-->
