--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -525,6 +525,7 @@
     <item quantity="other">Ne morete deliti več kot %d priponk.</item>
   </plurals>
   <string name="MediaSendActivity_select_recipients_description">Izberite prejemnike</string>
+  <string name="MediaSendActivity_tap_here_to_make_this_message_disappear_after_it_is_viewed">Tapnite tu in vaše sporočilo bo po ogledu prejemnika izginilo.</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Vsa večpredstavnostna sporočila</string>
   <!--MessageRecord-->
